--- a/octopub/frontend/test/Chart.yaml
+++ b/octopub/frontend/test/Chart.yaml
@@ -6,4 +6,4 @@ version: 1.0.0
 dependencies:
   - name: octopub-frontend
     repository: https://octopus-sales-public-helm-repo.s3.ap-southeast-2.amazonaws.com/charts
-    version: 0.3.44
+    version: 20250107.380.1
