--- a/octopub-products-development-application.yaml
+++ b/octopub-products-development-application.yaml
@@ -1,18 +1,18 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: octopub-frontend-test-application
+  name: octopub-products-development-application
   annotations:
-    codefresh.io/product: octopub-frontend
+    codefresh.io/product: octopub-products
   finalizers:
     - resources-finalizer.argocd.argoproj.io/foreground
 spec:
   project: default
   destination:
     name: in-cluster
-    namespace: octopub-test
+    namespace: octopub-development
   source:
-    path: octopub/frontend/test
+    path: octopub/products/development
     repoURL: https://github.com/mcasperson/OctopubSampleDeployments.git
     targetRevision: main
     helm:
