--- a/octopub-frontend-test-application.yaml
+++ b/octopub-frontend-test-application.yaml
@@ -4,6 +4,7 @@ metadata:
   name: octopub-frontend-test-application
   annotations:
     codefresh.io/product: octopub-frontend
+    codefresh.io/app-group: octopub
   finalizers:
     - resources-finalizer.argocd.argoproj.io/foreground
 spec:
