--- a/octopub/frontend/test/values.yaml
+++ b/octopub/frontend/test/values.yaml
@@ -1,4 +1,10 @@
 octopub-frontend:
   overrideTheme: orange
+  productEndpointOverride: /test/api/products
   ingress:
     enabled: true
+  hosts:
+    - host:
+      paths:
+        - path: /test
+          pathType: Prefix
