--- a/octopub/frontend/development/values.yaml
+++ b/octopub/frontend/development/values.yaml
@@ -1,4 +1,10 @@
 octopub-frontend:
   overrideTheme: green
+  productEndpointOverride: /development/api/products
   ingress:
     enabled: true
+  hosts:
+    - host:
+      paths:
+        - path: /development
+          pathType: Prefix
