--- a/octopub/products/development/values.yaml
+++ b/octopub/products/development/values.yaml
@@ -7,5 +7,5 @@ octopub-products-mysql:
   hosts:
     - host:
       paths:
-        - path: /development
+        - path: /development/api/products
           pathType: Prefix
