--- a/octopub/frontend/development/values.yaml
+++ b/octopub/frontend/development/values.yaml
@@ -5,12 +5,17 @@ octopub-frontend:
   # The frontend app makes client based API requests to the products microservice.
   # The products microservice is exposed via an ingress on an environment specific path.
   productEndpointOverride: /development/api/products
-  # The ingress is not created by default, so we enable it.
   ingress:
+    # The ingress is not created by default, so we enable it.
     enabled: true
+    # The services expect to be called from the root path. We have used the root path
+    # to identify the environment. This annotation ensures that the service thinks
+    # it was called from the root path.
+    annotations:
+      nginx.ingress.kubernetes.io/rewrite-target: /$1
     # The frontend app is exposed via an ingress on an environment specific path.
     hosts:
       - host:
         paths:
-          - path: /development
-            pathType: Prefix
+          - path: /development(/.*)
+            pathType: ImplementationSpecific
