--- a/octopub/products/development/Chart.yaml
+++ b/octopub/products/development/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: 1.13.21
+appVersion: 20250107.380.1
 description: Codefresh gitops runtime umbrella chart
 name: octopub-products-base
 version: 1.0.0
