Set color of feature branch build

--- a/octopub-frontend-featurebranch-application.yaml
+++ b/octopub-frontend-featurebranch-application.yaml
@@ -38,6 +38,8 @@ spec:
         valuesObject:
           image:
             tag: "latest"
+          # Feature branches are indicated by their pink theme
+          overrideTheme: pink
     syncPolicy:
       automated:
         prune: false
