Fixed up ingress

--- a/octopub-frontend-featurebranch-application.yaml
+++ b/octopub-frontend-featurebranch-application.yaml
@@ -41,11 +41,12 @@ spec:
               tag: "latest"
             # Feature branches are indicated by their pink theme
             overrideTheme: pink
-            hosts:
-              - host:
-                paths:
-                  - path: /{{.branch}}(/.*)
-                    pathType: ImplementationSpecific
+            ingress:
+              hosts:
+                - host:
+                  paths:
+                    - path: /{{.branch}}(/.*)
+                      pathType: ImplementationSpecific
       syncPolicy:
         automated:
           prune: false
