--- a/octopub-frontend-featurebranch-application.yaml
+++ b/octopub-frontend-featurebranch-application.yaml
@@ -24,6 +24,7 @@ spec:
         argocd-image-updater.argoproj.io/octopub.update-strategy: "latest"
         argocd-image-updater.argoproj.io/octopub.allow-tags: "regexp:^\\d+\\.\\d+\\.\\d+-{{.branch}}$"
         argocd-image-updater.argoproj.io/octopub.helm.image-tag: "image.tag"
+        argocd-image-updater.argoproj.io/octopub.helm.image-name: "image.name"
     spec:
       project: default
       destination:
