Go back to values object

--- a/octopub-frontend-featurebranch-application.yaml
+++ b/octopub-frontend-featurebranch-application.yaml
@@ -41,11 +41,15 @@ spec:
         helm:
           valueFiles:
             - values.yaml
-          parameters:
-            - name: overrideTheme
-              value: pink
-            - name: octopub-frontend.ingress.hosts[0].paths[0].path
-              value: /{{.branch}}(/.*)
+          valuesObject:
+            # Feature branches are indicated by their pink theme
+            overrideTheme: pink
+            ingress:
+              hosts:
+                - host:
+                  paths:
+                    - path: /{{.branch}}(/.*)
+                      pathType: ImplementationSpecific
       syncPolicy:
         automated:
           prune: false
