Added/Modified git-pat-obtainer-github-cm.yaml

--- a/git-pat-obtainer-github-cm.yaml
+++ b/git-pat-obtainer-github-cm.yaml
@@ -2,20 +2,19 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: git-pat-obtainer-github
-  namespace: codefresh
   labels:
     codefresh_io_entity: git-pat-obtainer
     codefresh_io_git_provider: github
 data:
   config: |
     provider: github
-    mode: CUSTOM
+    mode: CODEFRESH
     appName: ''
     secret:
-      name: github-oauth2
-      namespace: codefresh
+      name: ''
+      namespace: ''
       path:
-        appId: appId
-        clientId: clientId
-        clientSecret: clientSecret
-        url: url
+        appId: ''
+        clientId: ''
+        clientSecret: ''
+        url: ''
